mxslc/tests/data/error/loadlib_error_3.mxsl
#loadlib "../add_include_dir/noexist.mxsl"

float x = mad(pi(), 3.0, 4.0);
